[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Ubuntu.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/t01_res.png" type="Texture" id=2]
[ext_resource path="res://assets/moon_crop_res.png" type="Texture" id=3]
[ext_resource path="res://assets/sky01_res.png" type="Texture" id=4]
[ext_resource path="res://Calculations.gd" type="Script" id=5]

[node name="Calculations" type="Node2D"]
script = ExtResource( 5 )

[node name="sky01" type="Sprite" parent="."]
position = Vector2( 320.135, 180.805 )
texture = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 320, 576 )
rotation = 0.261799
__meta__ = {
"_edit_group_": true
}

[node name="moon_crop_res" type="Sprite" parent="Position2D"]
position = Vector2( -288, -464 )
rotation = -0.253073
texture = ExtResource( 3 )

[node name="t01_res" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gather" type="Button" parent="Control"]
margin_left = 61.8709
margin_top = 322.0
margin_right = 171.871
margin_bottom = 349.0
custom_fonts/font = ExtResource( 1 )
text = "собирать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feed" type="Button" parent="Control"]
margin_left = 201.151
margin_top = 322.0
margin_right = 311.151
margin_bottom = 349.0
custom_fonts/font = ExtResource( 1 )
text = "жечь"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dance" type="Button" parent="Control"]
margin_left = 338.884
margin_top = 322.0
margin_right = 448.884
margin_bottom = 349.0
custom_fonts/font = ExtResource( 1 )
text = "танцевать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fuckup" type="Button" parent="Control"]
margin_left = 474.734
margin_top = 322.0
margin_right = 584.734
margin_bottom = 349.0
custom_fonts/font = ExtResource( 1 )
text = "проебать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="Button" parent="Control"]
margin_left = 289.177
margin_top = 23.4454
margin_right = 343.177
margin_bottom = 48.4454
custom_fonts/font = ExtResource( 1 )
text = "сброс"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire" type="Label" parent="Control"]
modulate = Color( 0.996078, 0.466667, 0, 1 )
margin_left = 319.401
margin_top = 243.056
margin_right = 346.401
margin_bottom = 262.056
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 13.5, 7 )
custom_fonts/font = ExtResource( 1 )
text = "80"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/fire"]
anchor_left = 0.378
anchor_right = 0.439
margin_left = -1.54473
margin_top = 15.3403
margin_right = 21.8083
margin_bottom = 34.3403
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 1 )
text = "fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn" type="Label" parent="Control"]
modulate = Color( 0, 0.6, 0.996078, 1 )
margin_left = 235.177
margin_top = 37.4454
margin_right = 262.177
margin_bottom = 56.4454
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 13.5, 7 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="people" type="Label" parent="Control"]
margin_left = 482.879
margin_top = 103.346
margin_right = 509.879
margin_bottom = 122.346
rect_scale = Vector2( 10, 20 )
rect_pivot_offset = Vector2( 13.5, 7 )
custom_fonts/font = ExtResource( 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/people"]
anchor_left = 0.429
anchor_top = 0.092
anchor_right = 0.429
anchor_bottom = 0.337
margin_left = 2.46122
margin_top = 13.4363
margin_right = 63.4612
margin_bottom = 27.7813
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 1 )
text = "people"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wood" type="Label" parent="Control"]
modulate = Color( 0.282353, 0.0705882, 0.00392157, 1 )
margin_left = 61.8709
margin_top = 248.758
margin_right = 88.8709
margin_bottom = 267.758
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 13.5, 7 )
custom_fonts/font = ExtResource( 1 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/wood"]
margin_top = 13.0912
margin_right = 40.0
margin_bottom = 32.0912
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 1 )
text = "wood"

[node name="Label" type="Label" parent="Control"]
margin_left = 235.177
margin_top = 72.943
margin_right = 265.177
margin_bottom = 91.943
custom_fonts/font = ExtResource( 1 )
text = "turn"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/gather" to="." method="_on_gather_pressed"]
[connection signal="pressed" from="Control/feed" to="." method="_on_feed_pressed"]
[connection signal="pressed" from="Control/dance" to="." method="_on_dance_pressed"]
[connection signal="pressed" from="Control/fuckup" to="." method="_on_fuckup_pressed"]
[connection signal="pressed" from="Control/reset" to="." method="_on_reset_pressed"]
